[tool.poetry]
name = "nixops_vbox"
version = "1.0"
description = "NixOps plugin for VirtualBox"
authors = ["Amine Chikhaoui <amine.chikhaoui91@gmail.com>"]
include = [ "nixops_vbox/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/adisbladis/nixops.git", rev = "poetry2nix-plugins"}

[tool.poetry.plugins."nixops"]
nixops_vbox = "nixops_vbox.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
