[tool.poetry]
name = "nixopsvbox"
version = "1.7"
description = "NixOps backend for VirtualBox"
authors = ["adisbladis <amine.chikhaoui91@gmail.com>"]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/adisbladis/nixops.git", rev = "master"}

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.8.1"
black = "^19.10b0"

[tool.poetry.plugins."nixops"]
vbox = "nixopsvbox.plugin:load"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
